--- a/AlquilaCar/src/app/app.component.html
+++ b/AlquilaCar/src/app/app.component.html
@@ -1,6 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <h1>
-    Este es nuestro proyecto Alberto, Juan y Pepo
-  </h1>
-</div>
+<app-navbar></app-navbar>
+<router-outlet></router-outlet>
