--- a/AlquilaCar/src/app/shared/navbar/navbar.component.html
+++ b/AlquilaCar/src/app/shared/navbar/navbar.component.html
@@ -10,7 +10,7 @@
         <a class="nav-link" [routerLink]="['home']">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['register']">Registrate</a>
+        <a class="nav-link" [routerLink]="['register']">Login</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
