--- a/AlquilaCar/src/app/componentes/inicio/inicio.component.html
+++ b/AlquilaCar/src/app/componentes/inicio/inicio.component.html
@@ -1,3 +1,7 @@
-<p>
-  inicio works!
-</p>
+<div class="body_container">
+  <div class="container">
+    <h1>Bienvenido a AlquilaCar</h1><br>
+    <h3>La web que te pone en contacto con usuarios que quieren alquilar su coche</h3><br>
+    <button type="button" class="btn btn-primary btn-lg" [routerLink]="['login']">Comencemos</button>
+  </div>
+</div>
