--- a/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.css
+++ b/AlquilaCar/src/app/componentes/vista-coches/vista-coches.component.css
@@ -1,3 +1,12 @@
 .btn-warning {
   color: #ffffff;
 }
+.container {
+  margin-top: 2em;
+}
+.container_form {
+  margin-bottom: 1.5em;
+}
+.title_forms {
+  color: #E0A800;
+}
