--- a/AlquilaCar/src/app/componentes/inicio/inicio.component.css
+++ b/AlquilaCar/src/app/componentes/inicio/inicio.component.css
@@ -14,7 +14,15 @@
   -o-animation: fadein 2s;
   animation: fadein 2s;
 }
-
+.super-container{
+  width: 100%;
+  min-height: 100%;
+  position: fixed;
+  left:0;
+  background: url("../../../assets/bg.jpg") no-repeat center center fixed;
+  background-size: cover;
+  opacity: 0.9;
+}
 @keyframes fadein {
   from { opacity: 0; }
   to   { opacity: 1; }
