--- a/AlquilaCar/src/app/componentes/shared/navbar/navbar.component.html
+++ b/AlquilaCar/src/app/componentes/shared/navbar/navbar.component.html
@@ -1,17 +1,30 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" href="#"><img class="logo_navbar" src="./../../../../assets/alquilacar.png"></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-primary">
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+  <a class="navbar-brand col-md-1" [routerLink]="['home']"><img class="logo_navbar" src="./../../../../assets/alquilacar.png"></a>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+  <div class="collapse navbar-collapse  col-md-9" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" [routerLink]="['coches']">Alquila <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" [routerLink]="['login']">Login</a>
+        <a *ngIf="is_logged_in == false" class="nav-link" [routerLink]="['login']">Login</a>
       </li>
     </ul>
+  </div>
+  <div *ngIf="is_logged_in == true" class="btn-group col-md-2 justify-content-end align-items-center">
+    <span class="text-white mr-2">{{this.username | uppercase}}</span>
+    <img class="img_perfil" style="cursor:pointer;" src="../../../../assets/user.png" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
+    <div class="dropdown-menu dropdown-menu-right mt-2 mr-3">
+      <div class="login__body"></div>
+      <a class="dropdown-item" [routerLink]="['uploadCar']"><span class="text-warning mr-2 oi oi-cloud-upload"></span>Anuncia tu coche</a>
+      <a class="dropdown-item" [routerLink]="['home']"><span class="text-warning mr-2 oi oi-eye"></span>Revisa tus coches subidos</a>
+      <a class="dropdown-item"[routerLink]="['userData']"><span class="text-warning mr-2 oi oi-pencil"></span>Cambia tus datos</a>
+      <div class="dropdown-divider bg-warning"></div>
+      <a class="text-danger dropdown-item" [routerLink]="['home']" (click)="logOut()"><span class="mr-2 oi oi-power-standby" aria-hidden="true"></span>Logout</a>
+    </div>
   </div>
 </nav>
